--- a/project/medical-project/src/main/resources/templates/native/login.html
+++ b/project/medical-project/src/main/resources/templates/native/login.html
@@ -2,7 +2,7 @@
 <script type="text/javascript" src="js/libs/important/rem.js"></script>
 <link rel="stylesheet" href="styles/elder/healthFile.css?ver=1.1.3" type="text/css"/>
 <link rel="stylesheet" href="styles/elder/reset.css?ver=1.1.3" type="text/css"/>
-<base href="/elder/"/>
+<base href="/"/>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <META HTTP-EQUIV="Cache-Control" CONTENT="no-cache">
 <meta content="yes" name="apple-mobile-web-app-capable">
@@ -12,7 +12,7 @@
 <div class="overhidden">
     <!--headerTitle start-->
     <header class="loginHead">
-        <h1><img class="logoImg" src="/elder/images/laoyou_logo.png" alt=""></h1>
+        <h1><img class="logoImg" src="/images/laoyou_logo.png" alt=""></h1>
     </header>
     <!--headerTitle end-->
     <!--login start-->
