--- a/project/elder-project/src/main/resources/static/js/views/health/detectionDiagnose/diagnoseReportResult.html
+++ b/project/elder-project/src/main/resources/static/js/views/health/detectionDiagnose/diagnoseReportResult.html
@@ -22,8 +22,8 @@
                    controls="controls" style="display:none;">
             </audio>
             <div class="diagnoseAudioCtrl" ng-click="audioCtrl()">
-                <img ng-hide="paused" src="/elder/images/triangle_2@2x.png" alt="">
-                <img ng-show="paused" src="/elder/images/triangle_3@2x.png" alt="">
+                <img ng-hide="paused" src="/images/triangle_2@2x.png" alt="">
+                <img ng-show="paused" src="/images/triangle_3@2x.png" alt="">
             </div>
             <div class="diagnoseAudioTime">{{duration}}</div>
         </section>
