--- a/project/elder-project/src/main/resources/static/js/views/health/interventionGuidance/interventionGuidance.html
+++ b/project/elder-project/src/main/resources/static/js/views/health/interventionGuidance/interventionGuidance.html
@@ -20,15 +20,15 @@
         <ul class="secondary bgf secondaryBor">
             <a ng-click="goMenu('medicineIntervention','interventionPlan')">
                 <li ng-class="{'on': secondMenu == 'interventionPlan'}">
-                    <img ng-if="secondMenu == 'interventionPlan'" src="/elder/images/icon_plan1.png"/>
-                    <img ng-if="secondMenu == 'medicationRecord'" src="/elder/images/icon_plan2.png"/>
+                    <img ng-if="secondMenu == 'interventionPlan'" src="/images/icon_plan1.png"/>
+                    <img ng-if="secondMenu == 'medicationRecord'" src="/images/icon_plan2.png"/>
                     干预计划
                 </li>
             </a>
             <a ng-click="goMenu('medicineIntervention','medicationRecord')">
                 <li ng-class="{'on': secondMenu == 'medicationRecord'}">
-                    <img ng-if="secondMenu == 'medicationRecord'" src="/elder/images/icon_record1.png"/>
-                    <img ng-if="secondMenu == 'interventionPlan'" src="/elder/images/icon_record2.png"/>
+                    <img ng-if="secondMenu == 'medicationRecord'" src="/images/icon_record1.png"/>
+                    <img ng-if="secondMenu == 'interventionPlan'" src="/images/icon_record2.png"/>
                     服药记录
                 </li>
             </a>
