--- a/project/elder-project/src/main/resources/static/js/views/health/interventionGuidance/medicationRemind.html
+++ b/project/elder-project/src/main/resources/static/js/views/health/interventionGuidance/medicationRemind.html
@@ -12,7 +12,7 @@
             <span>服药提醒</span>
         </div>
         <div class="remindContainer bgf">
-            <img class="remindIcon" src="/elder/images/icon_medicine.png" alt="">
+            <img class="remindIcon" src="/images/icon_medicine.png" alt="">
             <div class="remindTxt bgf">
                 <p>{{medicationHint}}</p>
                 <p>{{medicationRemind.dose}}{{medicationRemind.drugName}}</p>
