--- a/project/elder-project/src/main/resources/static/js/views/message/groupChat.html
+++ b/project/elder-project/src/main/resources/static/js/views/message/groupChat.html
@@ -97,8 +97,8 @@
 					   style="display:none">
 				</audio>
 				<div class="diagnoseAudioCtrl" ng-click="audioCtrl()">
-					<img ng-hide="paused" src="/elder/images/triangle_2@2x.png" alt="">
-					<img ng-show="paused" src="/elder/images/triangle_3@2x.png" alt="">
+					<img ng-hide="paused" src="/images/triangle_2@2x.png" alt="">
+					<img ng-show="paused" src="/images/triangle_3@2x.png" alt="">
 				</div>
 			</div>
 			<div class="Inftxt">这是关于{{groupChatData.elderName}}的诊疗记录。</div>
