--- a/project/elder-project/src/main/resources/static/js/views/my/myClass.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myClass.html
@@ -1,7 +1,7 @@
 <div class="overhidden">
     <!--headerTitle start-->
     <header class="loginHead">
-        <h1><img class="logoImg" src="/elder/images/laoyou_logo.png" alt=""></h1>
+        <h1><img class="logoImg" src="/images/laoyou_logo.png" alt=""></h1>
     </header>
     <!--headerTitle end-->
     <!--login start-->
