--- a/project/elder-project/src/main/resources/static/js/views/health/detectionDiagnose/detectionDiagnose.html
+++ b/project/elder-project/src/main/resources/static/js/views/health/detectionDiagnose/detectionDiagnose.html
@@ -21,15 +21,15 @@
         <ul class="secondary bgf secondaryBor">
             <a ng-click="goMenu('detection','bloodSugarCurve')">
                 <li ng-class="{'on': secondMenu == 'bloodSugarCurve'||secondMenu == 'bloodSugarTable'}">
-                    <img ng-if="secondMenu == 'bloodPressureCurve'||secondMenu == 'bloodPressureTable'" src="/elder/images/icon_252.png"/>
-                    <img ng-if="secondMenu == 'bloodSugarCurve'||secondMenu == 'bloodSugarTable'" src="/elder/images/icon_251.png"/>
+                    <img ng-if="secondMenu == 'bloodPressureCurve'||secondMenu == 'bloodPressureTable'" src="/images/icon_252.png"/>
+                    <img ng-if="secondMenu == 'bloodSugarCurve'||secondMenu == 'bloodSugarTable'" src="/images/icon_251.png"/>
                     血糖
                 </li>
             </a>
             <a ng-click="goMenu('detection','bloodPressureCurve')">
                 <li ng-class="{'on': secondMenu == 'bloodPressureCurve'||secondMenu == 'bloodPressureTable'}">
-                    <img ng-if="secondMenu == 'bloodSugarCurve'||secondMenu == 'bloodSugarTable'" src="/elder/images/icon_242.png"/>
-                    <img ng-if="secondMenu == 'bloodPressureCurve'||secondMenu == 'bloodPressureTable'" src="/elder/images/icon_241.png"/>
+                    <img ng-if="secondMenu == 'bloodSugarCurve'||secondMenu == 'bloodSugarTable'" src="/images/icon_242.png"/>
+                    <img ng-if="secondMenu == 'bloodPressureCurve'||secondMenu == 'bloodPressureTable'" src="/images/icon_241.png"/>
                     血压心率
                 </li>
             </a>
@@ -135,7 +135,7 @@
             </div>
             <div class="empty10"></div>
             <section class="footOptionTab">
-                <a ng-click="goMenu('detection','bloodSugarTable')"><img src="/elder/images/Slice_1.png"/></a>
+                <a ng-click="goMenu('detection','bloodSugarTable')"><img src="/images/Slice_1.png"/></a>
                 <ul>
                     <li ng-class="{'on': timeType == 'week'}" ng-click="chooseHealthDataTime('week')">周</li>
                     <li ng-class="{'on': timeType == 'month'}" ng-click="chooseHealthDataTime('month')">月</li>
@@ -179,7 +179,7 @@
             </table>
             <div class="empty10"></div>
             <section class="footOptionTab">
-                <a ng-click="goMenu('detection','bloodSugarCurve')"><img src="/elder/images/Slice_2.png"/></a>
+                <a ng-click="goMenu('detection','bloodSugarCurve')"><img src="/images/Slice_2.png"/></a>
                 <ul>
                     <li ng-class="{'on': timeType == 'week'}" ng-click="chooseHealthDataTime('week')">周</li>
                     <li ng-class="{'on': timeType == 'month'}" ng-click="chooseHealthDataTime('month')">月</li>
@@ -215,7 +215,7 @@
             <!--底部固定菜单开始-->
             <div class="empty10"></div>
             <section class="footOptionTab">
-                <a ng-click="goMenu('detection','bloodPressureTable')"><img src="/elder/images/Slice_1.png"/></a>
+                <a ng-click="goMenu('detection','bloodPressureTable')"><img src="/images/Slice_1.png"/></a>
                 <ul>
                     <li ng-class="{'on': timeType == 'week'}" ng-click="chooseHealthDataTime('week')">周</li>
                     <li ng-class="{'on': timeType == 'month'}" ng-click="chooseHealthDataTime('month')">月</li>
@@ -242,7 +242,7 @@
             </table>
             <div class="empty10"></div>
             <section class="footOptionTab">
-                <a ng-click="goMenu('detection','bloodPressureCurve')"><img src="/elder/images/Slice_2.png"/></a>
+                <a ng-click="goMenu('detection','bloodPressureCurve')"><img src="/images/Slice_2.png"/></a>
                 <ul>
                     <li ng-class="{'on': timeType == 'week'}" ng-click="chooseHealthDataTime('week')">周</li>
                     <li ng-class="{'on': timeType == 'month'}" ng-click="chooseHealthDataTime('month')">月</li>
@@ -288,7 +288,7 @@
             <a ui-sref="diagnoseReportResult({recordDate:item.recordDate})">
                 <p class="reportListTit">{{item.recordDate.substring(0,10)}}</p>
                 <p class="reportListDate">责任医生：<span>{{item.providerName}}</span>记录时间：<span>{{item.recordDate.substring(11,16)}}</span></p>
-                <img class="diagnoseAudioIcon" src="/elder/images/icon_audio.png" alt="">
+                <img class="diagnoseAudioIcon" src="/images/icon_audio.png" alt="">
                 <p ng-if="item.description" class="reportCont">{{item.description}}</p>
             </a>
         </div>
