--- a/project/elder-project/src/main/resources/static/js/views/community/course/courseList.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/course/courseList.html
@@ -1,7 +1,7 @@
 <ion-view style="background:#f8f8f8;" ng-if="param.type=='live'">
     <ion-header-bar align-title="center" class="bar-positive">
         <div class="buttons">
-            <button class="button" ng-click="return()"><</button>
+            <button class="button" ng-click="returnRootNative()">&lt;返回</button>
         </div>
         <h1 class="title">讲堂直播</h1>
     </ion-header-bar>
@@ -36,7 +36,7 @@
 <ion-view style="background:white;" ng-if="param.type=='vod'">
     <ion-header-bar align-title="center" class="bar-energized">
         <div class="buttons">
-            <button class="button" ng-click="return()"><</button>
+            <button class="button" ng-click="returnRootNative()">&lt;返回</button>
         </div>
         <h1 class="title">在线课堂</h1>
     </ion-header-bar>
