--- a/project/elder-project/src/main/resources/static/js/views/community/course/courseDetail.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/course/courseDetail.html
@@ -21,8 +21,8 @@
 		</div>
 		<div style="background:white;width:90%;margin-left:5%;">
 			<h2 style="font-size:1px;">&nbsp;&nbsp;</h2>
-			<h1 style="font-size: 15px;color: blue;margin-left: 73%;width: 25%;">{{onlineCourseDiscussData.list.length}}条评论</h1>
-			<ion-item ng-repeat="item in onlineCourseDiscussData.list" style="border-color: transparent;color: black;width:90%;margin-left:5%;">
+			<h1 style="font-size: 15px;color: blue;margin-left: 73%;width: 25%;">{{onlineCourseDiscussData.length}}条评论</h1>
+			<ion-item ng-repeat="item in onlineCourseDiscussData" style="border-color: transparent;color: black;width:90%;margin-left:5%;">
 				<a style="color:black;font-size:15px;"><i class="icon ion-person"></i>&nbsp;{{item.elderName}}</a>
 				<p style="font-size:15px;">{{item.onlineCourseDiscussContent}}</p>
 			</ion-item>
@@ -81,7 +81,7 @@
 			</div>
 		</div>
 		<ion-list>
-			<ion-item ng-repeat="item in onlineCourseDiscussData.list" style="color:black">
+			<ion-item ng-repeat="item in onlineCourseDiscussData" style="color:black">
 				<p class="item-note">{{item.onlineCourseDiscussDate|date:'yyyy/MM/dd HH:mm:ss'}}</p>
 				<a style="color:black;font-size:15px;"><i class="icon ion-person"></i>&nbsp;{{item.elderName}}</a>
 				<p style="font-size:15px;">{{item.onlineCourseDiscussContent}}</p>
