--- a/project/elder-project/src/main/resources/templates/native/login.html
+++ b/project/elder-project/src/main/resources/templates/native/login.html
@@ -9,7 +9,8 @@
 <div class="overhidden">
     <!--headerTitle start-->
     <header class="loginHead">
-        <h1><img class="logoImg" src="/images/laoyou_logo.png" alt=""></h1>
+        <!--<h1><img class="logoImg" src="/images/laoyou_logo.png" alt=""></h1>-->
+        <h1><img class="logoImg" src="/images/huyida.png" alt=""></h1>
     </header>
     <!--headerTitle end-->
     <!--login start-->
