--- a/project/elder-project/src/main/resources/static/js/views/community/activity/activityList.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/activity/activityList.html
@@ -1,7 +1,7 @@
 <ion-view style="background:white;">
     <ion-header-bar align-title="center" class="bar-energized">
         <div class="buttons">
-            <button class="button" ng-click="return()"><</button>
+            <button class="button" ng-click="returnRootNative()">&lt;返回</button>
         </div>
         <h1 class="title">活动</h1>
     </ion-header-bar>
