--- a/project/elder-project/src/main/resources/templates/angular/elderIonicIndex.html
+++ b/project/elder-project/src/main/resources/templates/angular/elderIonicIndex.html
@@ -22,13 +22,16 @@
     "use strict";
     var require = {
         waitSeconds: 15,
-        urlArgs: "ver=1.0.0",  //防止读取缓存，调试用
+        urlArgs: "ver=1.0.1",  //防止读取缓存，调试用
         deps : ['js/mainElder']
     };
-    var elderVersion = "1.0.0";
-    var picVersion = "1.0.0";
+    var elderVersion = "1.0.1";
+    var picVersion = "1.0.1";
     var appName = 'mainElder';
 </script>
+<script src='js/libs/important/webim.config.js'></script>
+<script src='js/libs/important/strophe-1.2.8.min.js'></script>
+<script src='js/libs/important/websdk-1.4.11.js'></script>
 <script src="js/libs/ionic/ionic.bundle.min.js"></script>
 <script src="js/libs/ionic/ionic.min.js"></script>
 <script src="js/libs/ionic/ionic-angular.min.js"></script>
