--- a/project/elder-project/src/main/resources/static/js/views/community/communityIndex.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/communityIndex.html
@@ -8,7 +8,7 @@
             </ion-slide>
         </ion-slide-box>
         <div class="row" style="margin-left:5px">
-            <div class="col">
+            <div class="col" ui-sref="myChat" >
                 <img style="width:64px;height:64px"
                      src="http://yhllaoyouactivity.oss-cn-beijing.aliyuncs.com/QQ%E5%9B%BE%E7%89%8720171024133057.png">
                 <span style="color:black;margin-left:18px">健康</span>
