--- a/project/elder-project/src/main/resources/templates/angular/elderIonicIndex.html
+++ b/project/elder-project/src/main/resources/templates/angular/elderIonicIndex.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="styles/lib/reset.css"/>
     <link rel="stylesheet" href="styles/lib/fullcalendar.min.css"/>
     <link rel="stylesheet" href="styles/lib/spinners.css"/>
-    <link rel="stylesheet" href="styles/healthFile.css"/>
+    <link rel="stylesheet" href="styles/healthFile.css?ver="+elderVersion/>
 </head>
 <body>
 <ion-nav-view></ion-nav-view>
@@ -22,11 +22,11 @@
     "use strict";
     var require = {
         waitSeconds: 15,
-        urlArgs: "ver=1.0.0",  //防止读取缓存，调试用
+        urlArgs: "ver=1.0.2",  //防止读取缓存，调试用
         deps : ['js/mainElder']
     };
-    var elderVersion = "1.0.0";
-    var picVersion = "1.0.0";
+    var elderVersion = "1.0.2";
+    var picVersion = "1.0.2";
     var appName = 'mainElder';
 </script>
 <script src='js/libs/important/webim.config.js'></script>
