--- a/project/elder-project/src/main/resources/static/js/views/community/communityIndex.html
+++ b/project/elder-project/src/main/resources/static/js/views/community/communityIndex.html
@@ -18,7 +18,7 @@
                      src="http://yhllaoyouactivity.oss-cn-beijing.aliyuncs.com/QQ%E5%9B%BE%E7%89%8720171024133049.png">
                 <span style="color:black;margin-left:18px">活动</span>
             </div>
-            <div class="col">
+            <div class="col" ui-sref="notification">
                 <img style="width:64px;height:64px"
                      src="http://yhllaoyouactivity.oss-cn-beijing.aliyuncs.com/QQ%E5%9B%BE%E7%89%8720171024133100.png">
                 <span style="color:black;margin-left:18px">提醒</span>
