--- a/project/elder-project/src/main/resources/static/js/views/message/notification.html
+++ b/project/elder-project/src/main/resources/static/js/views/message/notification.html
@@ -1,7 +1,7 @@
 <ion-view style="background:white;">
     <ion-header-bar align-title="center" class="bar-energized">
         <div class="buttons">
-            <button class="button" onclick="window.history.go(-1)"><</button>
+            <button class="button" onclick="window.history.go(-1)">&lt;返回</button>
         </div>
         <h1 class="title">老友提醒</h1>
     </ion-header-bar>
