--- a/project/elder-project/src/main/resources/static/js/views/living/livingIndex.html
+++ b/project/elder-project/src/main/resources/static/js/views/living/livingIndex.html
@@ -1,15 +1,43 @@
 <ion-view style="background:#f8f8f8;">
-
+    <ion-header-bar align-title="center" class="bar-energized">
+        <h1 class="title">居家服务</h1>
+    </ion-header-bar>
     <ion-content>
         <ion-slide-box auto-play="true" does-continue="true" slide-interval=1000>
-            <ion-slide ng-repeat="item in param.bannerList">
+            <ion-slide ng-repeat="item in param.bannerList" style="height:100px;">
                 <div class="box" style="width:120%">
                     <img ng-src="{{item.banner}}?x-oss-process=image/resize,m_fill,h_200,w_420"/>
                 </div>
             </ion-slide>
         </ion-slide-box>
-
-
+        <div class="list" style="margin-top:1px;">
+            <a class="item item-avatar item-text-wrap" style="min-height:80px">
+                <img src="http://yhllaoyoubanner.oss-cn-hangzhou.aliyuncs.com/1.png" style="max-width:50px;max-height:50px;border-radius:0;margin-left:-5px;">
+                <h2>短时服务</h2>
+                <span class="item-note" style="color:#ff8e01">></span>
+                <p>衣食住行&nbsp;服务定制</p>
+                <p>足不出户&nbsp;极速享受</p>
+            </a>
+            <a class="item item-avatar item-text-wrap" style="min-height:80px">
+                <img src="http://yhllaoyoubanner.oss-cn-hangzhou.aliyuncs.com/1.png" style="max-width:50px;max-height:50px;border-radius:0;margin-left:-5px;">
+                <h2>长期照护</h2>
+                <span class="item-note" style="color:#ff8e01">></span>
+                <p>优质照护&nbsp;诚信可靠</p>
+                <p>无微不至&nbsp;满意度高</p>
+            </a>
+        </div>
+        <h2 style="font-size:18px;margin-top:35px;margin-left:15px;width:100%">
+            服务站点
+        </h2>
+        <div class="list" style="margin-top: 15px;">
+            <a class="item item-avatar item-text-wrap" ng-repeat="item in [1,2,3]" style="min-height:125px">
+                <img src="http://yhllaoyoubanner.oss-cn-hangzhou.aliyuncs.com/1.png" style="max-width:50px;max-height:50px;border-radius:0;margin-left:-5px;">
+                <h2 style="color:#ff8e01">阳关积善之家&nbsp;&nbsp;&nbsp;&nbsp;共36项服务</h2>
+                <p>嵌入社区的积善之家照料中心，提供全方位的养老服务产品。这是后台填写的服务站简介。</p>
+                <button class="button button-energized button-small item-note">立即预约</button>
+                <p><i class="ion ion-location"></i>和平里北街40号</p>
+            </a>
+        </div>
     </ion-content>
 </ion-view>
 
