--- a/project/elder-project/src/main/resources/static/js/views/living/livingIndex.html
+++ b/project/elder-project/src/main/resources/static/js/views/living/livingIndex.html
@@ -41,7 +41,8 @@
                 <h2 style="color:#ff8e01">阳关积善之家&nbsp;&nbsp;&nbsp;&nbsp;共36项服务</h2>
                 <p></p>
                 <p>嵌入社区的积善之家照料中心，提供全方位的养老服务产品。这是后台填写的服务站简介。</p>
-                <button class="button button-energized button-small item-note">立即预约</button>
+                <button class="button button-energized button-small item-note"
+                        ng-click="reserveService(item)">立即预约</button>
                 <p></p>
                 <p><i class="ion ion-location"></i>&nbsp;和平里北街40号</p>
             </a>
