--- a/project/elder-project/src/main/resources/static/js/views/living/livingServiceDetail.html
+++ b/project/elder-project/src/main/resources/static/js/views/living/livingServiceDetail.html
@@ -15,7 +15,7 @@
             <a class="item item-avatar item-text-wrap" style="min-height:80px">
                 <button class="button button-energized button-larger item-note"
                         style="min-width:100px"
-                        ui-sref="livingServiceDetail({livingServiceId:item.livingServiceId})">预约</button>
+                        ng-click="subscribeService()">预约</button>
                 <h2><span style="margin-left:-15%;font-size:20px">¥50元/小时</span></h2>
                 <h2><span style="margin-left:-15%;font-size:15px;color:red">审核通过后当面结算付费</span></h2>
             </a>
