--- a/project/elder-project/src/main/resources/static/js/views/living/livingServiceList.html
+++ b/project/elder-project/src/main/resources/static/js/views/living/livingServiceList.html
@@ -50,6 +50,7 @@
                 </p>
             </a>
         </div>
+        <div style="height:88px;"></div>
     </ion-content>
     <div class="bar bar-footer bar-stable" style="height:88px;">
         <div class="title" ng-if="param.type == 'short'">共为您加载{{shortResponse.length}}条数据</div>
