--- a/project/elder-project/src/main/resources/static/js/views/my/myService.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myService.html
@@ -20,97 +20,91 @@
 			<p style="margin-top:-10px">未成功</p>
 		</a>
 	</div>
-	<div ng-if="param.tabValue=='inReview'">
-		<div class="list" style="margin-top:25%;color:black">
-			<a class="item" ng-repeat="item in [1,2]">
+    <ion-content style="margin-top:13%;color:#000;">
+		<div class="list" ng-if="param.tabValue=='inReview'">
+			<a class="item" ng-repeat="item in inReviewResponse">
                 <div>
-                    <i class="">LY20171103365091164</i>
+                    <i class="">{{item.id}}</i>
                     <i class="item-note">当面结算</i>
                 </div>
                 <div style="margin-top:2%;">
                     <div class="item-content">
-                        <i class="">血三项测量</i>
+                        <i class="">{{item.name}}</i>
                         <i class="item-note">
-                            <p class="text-right">￥50元/1次</p>
+                            <p class="text-right">￥{{item.price}}元/1{{item.priceUnit}}</p>
                         </i>
                     </div>
-                    <p style="margin:3% 0;white-space:normal;">正在等待一心养老驿站电话联系您并确认接收服务预约</p>
+                    <p style="margin:3% 0;white-space:normal;">正在等待{{item.officeName}}电话联系您并确认接收服务预约</p>
                     <div class="item-content">
-                        <i class="">预约时间：2017年10月24日 13:15</i>
-                        <i class="item-note" ng-click="sendMessage(item)">催审核</i>
+                        <i class="">预约时间：{{item.create_date | date:'yyyy年MM月dd日 HH:mm'}}</i>
+                        <i class="item-note" ng-click="sendMessage(item.id)">催审核</i>
                     </div>
                 </div>
 			</a>
 		</div>
-	</div>
-	<div ng-if="param.tabValue=='inService'">
-        <div class="list" style="margin-top:25%;color:black">
-            <a class="item" ng-repeat="item in [1,2]">
+        <div class="list" ng-if="param.tabValue=='inService'">
+            <a class="item" ng-repeat="item in inServiceResponse">
                 <div>
-                    <i class="">LY20171103365091164</i>
+                    <i class="">{{item.id}}</i>
                     <i class="item-note">当面结算</i>
                 </div>
                 <div style="margin-top:2%;">
                     <div class="item-content">
-                        <i class="">血三项测量</i>
+                        <i class="">{{item.name}}</i>
                         <i class="item-note">
-                            <p class="text-right">￥50元/1次</p>
+                            <p class="text-right">￥{{item.price}}元/1{{item.priceUnit}}</p>
                         </i>
                     </div>
-                    <p style="margin:3% 0;white-space:normal;">一心养老驿站已接收您的预约，将与您当面结算并签约</p>
+                    <p style="margin:3% 0;white-space:normal;">{{item.officeName}}已接收您的预约，将与您当面结算并签约</p>
                     <div class="item-content">
-                        <i class="">护理师：陈艳艳<br/>服务时间：2017年10月24日 13:15</i>
+                        <i class="">护理师：{{item.nurse}}<br/><br/>服务时间：{{item.serviceTime | date:'yyyy年MM月dd日 HH:mm'}}</i>
                         <i class="item-note">成功享受服务</i>
                     </div>
                 </div>
             </a>
         </div>
-	</div>
-    <div ng-if="param.tabValue=='finished'">
-        <div class="list" style="margin-top:25%;color:black">
-            <a class="item" ng-repeat="item in [1,2]">
+        <div class="list" ng-if="param.tabValue=='finished'">
+            <a class="item" ng-repeat="item in finishedResponse">
                 <div>
-                    <i class="">LY20171103365091164</i>
+                    <i class="">{{item.id}}</i>
                     <i class="item-note">当面结算</i>
                 </div>
                 <div style="margin-top:2%;">
                     <div class="item-content">
-                        <i class="">血三项测量</i>
+                        <i class="">{{item.name}}</i>
                         <i class="item-note">
-                            <p class="">优惠价：￥30元/1次</p>
-                            <p class="text-right">￥50元/1次</p>
+                            <p class="">优惠价：￥{{item.discountPrice}}元/1{{item.discountPriceUnit}}</p>
+                            <p class="text-right">￥{{item.price}}元/1{{item.priceUnit}}</p>
                         </i>
                     </div>
-                    <p style="margin:3% 0;white-space:normal;">一心养老驿站收到您的服务费，并确认本次交易生效</p>
+                    <p style="margin:3% 0;white-space:normal;">{{item.officeName}}收到您的服务费，并确认本次交易生效</p>
                     <div class="item-content">
-                        <i class="">护理师：陈艳艳<br/>服务时间：2017年10月24日 13:15</i>
-                        <i class="item-note" ng-click="delOrder(item)">删除订单</i>
+                        <i class="">护理师：{{item.nurse}}<br/><br/>服务时间：{{item.serviceTime | date:'yyyy年MM月dd日 HH:mm'}}</i>
+                        <i class="item-note" ng-click="delOrder(item.id)">删除订单</i>
                     </div>
                 </div>
             </a>
         </div>
-    </div>
-    <div ng-if="param.tabValue=='failed'">
-        <div class="list" style="margin-top:25%;color:black">
-            <a class="item" ng-repeat="item in [1,2]">
+        <div class="list" ng-if="param.tabValue=='failed'">
+            <a class="item" ng-repeat="item in failedResponse">
                 <div>
-                    <i class="">LY20171103365091164</i>
+                    <i class="">{{item.id}}</i>
                     <i class="item-note">当面结算</i>
                 </div>
                 <div style="margin-top:2%;">
                     <div class="item-content">
-                        <i class="">血三项测量</i>
+                        <i class="">{{item.name}}</i>
                         <i class="item-note">
-                            <p class="text-right">￥50元/1次</p>
+                            <p class="text-right">￥{{item.price}}元/1{{item.priceUnit}}</p>
                         </i>
                     </div>
-                    <p style="margin:3% 0;white-space:normal;">一心养老驿站拒绝了您的预约，原因是“后台拒绝订单填写的原因”</p>
+                    <p style="margin:3% 0;white-space:normal;">{{item.officeName}}拒绝了您的预约，原因是“{{item.refusal}}”</p>
                     <div class="item-content">
-                        <i class="">预约时间：2017年10月24日 13:15</i>
-                        <i class="item-note" ng-click="delOrder(item)">删除订单</i>
+                        <i class="">预约时间：{{item.create_date | date:'yyyy年MM月dd日 HH:mm'}}</i>
+                        <i class="item-note" ng-click="delOrder(item.id)">删除订单</i>
                     </div>
                 </div>
             </a>
         </div>
-    </div>
+    </ion-content>
 </ion-view>
