--- a/project/elder-project/src/main/resources/static/js/views/my/myService.html
+++ b/project/elder-project/src/main/resources/static/js/views/my/myService.html
@@ -31,7 +31,7 @@
                     <div class="item-content">
                         <i class="">{{item.name}}</i>
                         <i class="item-note">
-                            <p class="text-right">￥{{item.price}}元/1{{item.priceUnit}}</p>
+                            <p class="text-right">￥{{item.price}}元/{{item.priceUnit}}</p>
                         </i>
                     </div>
                     <p style="margin:3% 0;white-space:normal;">正在等待{{item.officeName}}电话联系您并确认接收服务预约</p>
@@ -52,7 +52,7 @@
                     <div class="item-content">
                         <i class="">{{item.name}}</i>
                         <i class="item-note">
-                            <p class="text-right">￥{{item.price}}元/1{{item.priceUnit}}</p>
+                            <p class="text-right">￥{{item.discountPrice}}元/{{item.discountPriceUnit}}</p>
                         </i>
                     </div>
                     <p style="margin:3% 0;white-space:normal;">{{item.officeName}}已接收您的预约，将与您当面结算并签约</p>
@@ -73,7 +73,7 @@
                     <div class="item-content">
                         <i class="">{{item.name}}</i>
                         <i class="item-note">
-                            <p class="">优惠价：￥{{item.discountPrice}}元/1{{item.discountPriceUnit}}</p>
+                            <p class="">优惠价：￥{{item.discountPrice}}元/{{item.discountPriceUnit}}</p>
                             <p class="text-right">￥{{item.price}}元/1{{item.priceUnit}}</p>
                         </i>
                     </div>
@@ -95,7 +95,7 @@
                     <div class="item-content">
                         <i class="">{{item.name}}</i>
                         <i class="item-note">
-                            <p class="text-right">￥{{item.price}}元/1{{item.priceUnit}}</p>
+                            <p class="text-right">￥{{item.price}}元/{{item.priceUnit}}</p>
                         </i>
                     </div>
                     <p style="margin:3% 0;white-space:normal;">{{item.officeName}}拒绝了您的预约，原因是“{{item.refusal}}”</p>
